--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-	"conventionalCommits.scopes": ["users", "style", "admin", "dashboard", "login", "signup", "error", "unauthorized"]
+	"conventionalCommits.scopes": [
+		"users",
+		"style",
+		"admin",
+		"dashboard",
+		"login",
+		"signup",
+		"error",
+		"unauthorized",
+		"webiste"
+	]
 }
